[tool.poetry]
name = "muhblog"
version = "0.1.0"
description = ""
authors = ["Gregor Smith <gregor_smith@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
flask = "^1.1"
python-slugify = "^4.0"
peewee = "^3.12"
mistune = "^0.8.4"
frozen-flask = "^0.15.0"
django-htmlmin = "^0.11.0"
python-dotenv = "^0.10.3"
pygments = "^2.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.740.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
